welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: type int
	def test(n:int) {
                   ^countTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(a)) {
                ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(b)) {
                ^countTeen:16: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(b)) {
                ^