welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	def test(n:int) {
		if ((n>=1) && (n<=19)) {
			return true
		} else { 
			return false
		}
	}
	var compteur=0
	if (test(a)) {
		compteur=compteur +1
	}
	if (test(b)) {
		compteur=compteur+1
	}
	if (test(b)) {
		compteur=compteur+1
	}
	return compteur
}
	